Bug 1226200 - Don't assume a TCPSocket has only one managee (and rename LoneManagedOrNull). r=jdm, a=sylvestre

--HG--
extra : source : 16b693debb2bbe27943595bef7c76e0479655529