dom/ipc/ContentChild.cpp
@@ -1723,7 +1723,7 @@ ContentChild::DeallocPTestShellChild(PTestShellChild* shell)
 jsipc::CPOWManager*
 ContentChild::GetCPOWManager()
 {
-    if (PJavaScriptChild* c = LoneManagedOrNull(ManagedPJavaScriptChild())) {
+    if (PJavaScriptChild* c = LoneManagedOrNullAsserts(ManagedPJavaScriptChild())) {
         return CPOWManagerFor(c);
     }
     return CPOWManagerFor(SendPJavaScriptConstructor());
@@ -2226,7 +2226,7 @@ ContentChild::ProcessingError(Result aCode, const char* aReason)
     }
 
 #if defined(MOZ_CRASHREPORTER) && !defined(MOZ_B2G)
-    if (PCrashReporterChild* c = LoneManagedOrNull(ManagedPCrashReporterChild())) {
+    if (PCrashReporterChild* c = LoneManagedOrNullAsserts(ManagedPCrashReporterChild())) {
         CrashReporterChild* crashReporter =
             static_cast<CrashReporterChild*>(c);
         nsDependentCString reason(aReason);
