dom/network/TCPSocketParent.cpp
@@ -68,7 +68,7 @@ uint32_t
 TCPSocketParent::GetAppId()
 {
   const PContentParent *content = Manager()->Manager();
-  if (PBrowserParent* browser = LoneManagedOrNull(content->ManagedPBrowserParent())) {
+  if (PBrowserParent* browser = SingleManagedOrNull(content->ManagedPBrowserParent())) {
     TabParent *tab = TabParent::GetFrom(browser);
     return tab->OwnAppId();
   } else {
@@ -80,7 +80,7 @@ bool
 TCPSocketParent::GetInBrowser()
 {
   const PContentParent *content = Manager()->Manager();
-  if (PBrowserParent* browser = LoneManagedOrNull(content->ManagedPBrowserParent())) {
+  if (PBrowserParent* browser = SingleManagedOrNull(content->ManagedPBrowserParent())) {
     TabParent *tab = TabParent::GetFrom(browser);
     return tab->IsBrowserElement();
   } else {
@@ -223,7 +223,9 @@ TCPSocketParent::RecvOpenBind(const nsCString& aRemoteHost,
   uint32_t appId = nsIScriptSecurityManager::NO_APP_ID;
   bool     inBrowser = false;
   const PContentParent *content = Manager()->Manager();
-  if (PBrowserParent* browser = LoneManagedOrNull(content->ManagedPBrowserParent())) {
+  if (PBrowserParent* browser = SingleManagedOrNull(content->ManagedPBrowserParent())) {
+    // appId's are for B2G only currently, where managees.Count() == 1
+    // This is not guaranteed currently in Desktop, so skip this there.
     TabParent *tab = TabParent::GetFrom(browser);
     appId = tab->OwnAppId();
     inBrowser = tab->IsBrowserElement();
