ipc/glue/ProtocolUtils.h
@@ -336,12 +336,25 @@ using ManagedContainer = nsTHashtable<nsPtrHashKey<Protocol>>;
 
 template<typename Protocol>
 Protocol*
-LoneManagedOrNull(const ManagedContainer<Protocol>& aManagees)
+LoneManagedOrNullAsserts(const ManagedContainer<Protocol>& aManagees)
 {
     if (aManagees.IsEmpty()) {
         return nullptr;
     }
     MOZ_ASSERT(aManagees.Count() == 1);
+    return aManagees.ConstIter().Get()->GetKey();
+}
+
+// appId's are for B2G only currently, where managees.Count() == 1. This is
+// not guaranteed currently in Desktop, so for paths used for desktop,
+// don't assert there's one managee.
+template<typename Protocol>
+Protocol*
+SingleManagedOrNull(const ManagedContainer<Protocol>& aManagees)
+{
+    if (aManagees.Count() != 1) {
+        return nullptr;
+    }
     return aManagees.ConstIter().Get()->GetKey();
 }
 
